# djangoapp

./: manage.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py  urls.py  wsgi.py
