[project]
name = "wepynaire-comment-tester-votre-projet-django-20230228"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.2.3 ; python_full_version >= '3.6'",
    "asgiref==3.6.0 ; python_full_version >= '3.7'",
    "binaryornot==0.4.4",
    "bleach[css]==6.0.0 ; python_full_version >= '3.7'",
    "certifi==2022.12.7 ; python_full_version >= '3.6'",
    "chardet==5.1.0 ; python_full_version >= '3.7'",
    "charset-normalizer==3.0.1",
    "click==8.1.3 ; python_full_version >= '3.7'",
    "cookiecutter==2.1.1 ; python_full_version >= '3.7'",
    "crispy-bootstrap5==0.7",
    "django==4.1.7",
    "django-crispy-forms==2.0 ; python_full_version >= '3.7'",
    "django-environ==0.9.0",
    "django-extensions==3.2.1",
    "django-markdownify==0.9.2",
    "gunicorn==20.1.0",
    "idna==3.4 ; python_full_version >= '3.5'",
    "jinja2==3.1.2 ; python_full_version >= '3.7'",
    "jinja2-time==0.2.0",
    "markdown==3.4.1 ; python_full_version >= '3.7'",
    "markupsafe==3.0.2 ; python_full_version >= '3.7'",
    "pillow==11.2.1",
    "psycopg2-binary==2.9.10",
    "pygments==2.14.0",
    "python-dateutil==2.8.2 ; python_full_version >= '2.7'",
    "python-slugify==8.0.1 ; python_full_version >= '3.7'",
    "python-webpack-boilerplate==1.0.1",
    "pyyaml==6.0.2 ; python_full_version >= '3.6'",
    "requests==2.28.2 ; python_full_version >= '3.7' and python_full_version < '4'",
    "setuptools==67.4.0 ; python_full_version >= '3.7'",
    "six==1.16.0 ; python_full_version >= '2.7'",
    "sqlparse==0.4.3 ; python_full_version >= '3.5'",
    "text-unidecode==1.3",
    "tinycss2==1.1.1",
    "urllib3==1.26.14 ; python_full_version >= '2.7'",
    "webencodings==0.5.1",
]
